--- a/.docker/app/xdebug.ini
+++ b/.docker/app/xdebug.ini
@@ -1,6 +1,7 @@
 xdebug.mode=debug
 xdebug.client_port=9000
 xdebug.idekey=PHPSTORM
+xdebug.log_level = 0
 
 ; xdebug legacy settings (2.9.5)
 ;xdebug.remote_port = 9000
