--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       PHP_IDE_CONFIG: "serverName=localhost"
       XDEBUG_CONFIG: "client_host=host.docker.internal" # change to docker.for.win.localhost if on Windows without WSL
       XDEBUG_SESSION: "PHPSTORM"
-    command: php bin/console messenger:consume
+#    command: php bin/console messenger:consume
 
   nginx:
     image: nginx
