--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=2ccd6ed3526feeb93aaf986bce8f193a
 ###< symfony/framework-bundle ###
 
@@ -37,3 +37,9 @@ DATABASE_URL="postgresql://symfony:ChangeMe@database:5432/app?serverVersion=13&c
 SLACK_APP_TOKEN=
 SLACK_APP_ID=
 SLACK_REQUEST_TOKEN=
+SLACK_ACCESSORY_IMAGE_URL=
+SLACK_ACCESSORY_ALT_TEXT=
+
+GITLAB_TOKEN=
+GITLAB_API_URL=
+GITLAB_DOMAIN=
