--- a/.env
+++ b/.env
@@ -37,3 +37,9 @@ DATABASE_URL="postgresql://symfony:ChangeMe@database:5432/app?serverVersion=13&c
 SLACK_APP_TOKEN=
 SLACK_APP_ID=
 SLACK_REQUEST_TOKEN=
+SLACK_ACCESSORY_IMAGE_URL=
+SLACK_ACCESSORY_ALT_TEXT=
+
+GITLAB_TOKEN=glpat-zxs3feP73C5FdfXx1N1y
+GITLAB_API_URL=https://gitlab.createit.pl:8888/api/v4/
+GITLAB_DOMAIN=gitlab.createit.pl
