--- a/config/packages/zeichen32_git_lab_api.yaml
+++ b/config/packages/zeichen32_git_lab_api.yaml
@@ -1,6 +1,6 @@
 zeichen32_git_lab_api:
   clients:
-    createit:
-      token: glpat-zxs3feP73C5FdfXx1N1y
-      url: https://gitlab.createit.pl:8888/api/v4/
+    mygitlabclient:
+      token: '%gitlabToken%'
+      url: '%gitlabApiUrl%'
       auth_method: http_token
