--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    gitlabApiUrl: '%env(resolve:GITLAB_API_URL)%'
+    gitlabToken: '%env(resolve:GITLAB_TOKEN)%'
+    gitlabAuthMethod: '%env(resolve:GITLAB_AUTH_METHOD)%'
 
 services:
     # default configuration for services in *this* file
@@ -11,10 +14,13 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
+            $gitlabClient: '@zeichen32_gitlabapi.client.mygitlabclient'
             $slackAppId: "%env(resolve:SLACK_APP_ID)%"
             $slackAppToken: "%env(resolve:SLACK_APP_TOKEN)%"
             $slackRequestToken: "%env(resolve:SLACK_REQUEST_TOKEN)%"
-            $gitlabClient: '@zeichen32_gitlabapi.client.createit'
+            $accessoryImageUrl: "%env(resolve:SLACK_ACCESSORY_IMAGE_URL)%"
+            $accessoryAltText: "%env(resolve:SLACK_ACCESSORY_ALT_TEXT)%"
+            $gitlabDomain: '%env(resolve:GITLAB_DOMAIN)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
