--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=8.0.2",
         "symfony/flex": "^2.2",
-        "spatricius/slack-unfurl-bundle": "dev-main"
+        "spatricius/slack-unfurl-bundle": "1.*"
     },
     "config": {
         "allow-plugins": {
