update docker scripts

--- a/.docker/app/xdebug.ini
+++ b/.docker/app/xdebug.ini
@@ -1,7 +1,9 @@
 xdebug.mode=debug
 xdebug.client_port=9000
+client_host=host.docker.internal
 xdebug.idekey=PHPSTORM
 xdebug.log_level = 0
+xdebug.start_with_request=yes
 
 ; xdebug legacy settings (2.9.5)
 ;xdebug.remote_port = 9000
