--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,11 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
+  app:
+    build:
+      args:
+        - without_xdebug=1
+  ###> doctrine/doctrine-bundle ###
   database:
     ports:
       - "5432"
