--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -7,7 +7,7 @@ when@dev:
         handlers:
             main:
                 type: stream
-                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: "php://stderr"
                 level: debug
                 channels: ["!event"]
             console:
