--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -12,8 +12,7 @@ when@dev:
             console:
                 type: console
                 process_psr_3_messages: false
-                channels: ["!doctrine", "!console"]
-#                channels: ["!event", "!doctrine", "!console"]
+                channels: ["!event", "!doctrine", "!console"]
 
 when@prod:
     monolog:
