--- a/app.json
+++ b/app.json
@@ -15,11 +15,11 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "standard-1x"
+      "size": "hobby"
     },
     "worker": {
       "quantity": 1,
-      "size": "standard-1x"
+      "size": "hobby"
     }
   },
   "env": {
