--- a/app.json
+++ b/app.json
@@ -15,11 +15,11 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "hobby"
+      "size": "free"
     },
     "worker": {
       "quantity": 1,
-      "size": "hobby"
+      "size": "free"
     }
   },
   "env": {
