--- a/.docker/nginx/conf.d/app.conf
+++ b/.docker/nginx/conf.d/app.conf
@@ -4,7 +4,10 @@ server {
     proxy_read_timeout 1440;
     client_max_body_size 256M;
 
-    listen 80;
+    listen 443 ssl;
+    ssl_certificate /etc/nginx/cert/fullchain1.pem;
+    ssl_certificate_key /etc/nginx/cert/privkey1.pem;    
+    
     index index.php;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
